Add "Show missing entries" setting

--- a/ArchaeologistAchievementHelper/default-config.json
+++ b/ArchaeologistAchievementHelper/default-config.json
@@ -1,6 +1,7 @@
 {
   "enabled": true,
-    "settings": {
-        "Show missing facts (WARNING: SPOILERS)": false
+  "settings": {
+      "Show missing facts (WARNING: SPOILERS)": false,
+      "Show missing entries (WARNING: SPOILERS)": false
     }
 }
